--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -20,7 +20,8 @@
         "val": "http://localhost:8080/v1alpha1/graphql",
         "scope": "global"
       }
-    }
+    },
+    "buildsInSource": true
   },
   "scripts": {
     "start": "esy x Main",
